@@ -1,0 +1,3 @@
+package Monkey::Plugin::Bonobo;
+
+1;
