@@ -1,0 +1,3 @@
+package Monkey::Plugin::Bonobo::Utilities;
+
+1;
