@@ -1,0 +1,3 @@
+package Monkey::Plugin::Mandrill;
+
+1;
